Removed dead files and added security